# MTG-GUI-Project-AJ

./: README.md  pyproject.toml
mtg-gui-project-aj/: app.py  controller.py
resources/: styles.qss
