[tool.poetry]
name = "mtg-gui-project-aj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"
requests = "^2.31.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
scrython = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
